# Oditor

./: Dockerfile  Makefile  README.md  dune  dune-project  hello  oditor.ml  oditor.opam
editor/: colors.ml  config.ml  default_keymaps.ml  display.ml  dune  editor.ml  files.ml  input.ml  insert.ml  movement.ml  vim_keymaps.ml
tests/: dune  run_tests.ml  simple_functions.ml
