(library
  (name editor)
  (modules editor)
  (libraries unix terminal_size))

(library
  (name colors)
  (modules colors)
  (libraries editor))

(library
  (name input)
  (modules input)
  (libraries editor))

(library
  (name display)
  (modules display)
  (libraries editor colors))

(library
  (name files)
  (modules files)
  (libraries editor colors))

(library
  (name insert)
  (modules insert)
  (libraries editor colors))

(library
  (name movement)
  (modules movement)
  (libraries editor))

(library
  (name vim_keymaps)
  (modules vim_keymaps)
  (libraries editor input display insert movement))
