(library
  (name editor)
  (modules editor)
  (libraries unix terminal_size))

(library
  (name colors)
  (modules colors)
  (libraries editor))

(library
  (name input)
  (modules input)
  (libraries editor))

(library
  (name display)
  (modules display)
  (libraries editor colors))

(library
  (name files)
  (modules files)
  (libraries editor colors))

(library
  (name insert)
  (modules insert)
  (libraries editor colors))

(library
  (name movement)
  (modules movement)
  (libraries editor))

(library
  (name config)
  (modules config)
  (libraries yaml yaml.unix editor input))

(library
  (name default_keymaps)
  (modules default_keymaps)
  (libraries editor input display files insert movement))

(library
  (name vim_keymaps)
  (modules vim_keymaps)
  (libraries editor input display files insert movement))
